Tensorflow GPU test

--- a/Tensorflow GPU test.ipynb
+++ b/Tensorflow GPU test.ipynb
@@ -3,16 +3,56 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "47ef57ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pip 22.0.2 from /home/alexsis/proj/JupyterTests310/venv/lib/python3.10/site-packages/pip (python 3.10)\n",
+      "/home/alexsis/proj/JupyterTests310/venv/bin/python3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip --version\n",
+    "import sys\n",
+    "print(sys.executable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d08eca0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "9e99dac4",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-25 18:15:53.321357: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-05-25 18:15:53.950442: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'2.12.0'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,17 +65,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f871e2f2",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-25 18:16:05.162622: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-25 18:16:05.333513: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2023-05-25 18:16:05.333553: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[]"
+       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,9 +99,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JupyterTests310",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "jupytertests310"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
