--- a/Tensorflow GPU test.ipynb
+++ b/Tensorflow GPU test.ipynb
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pip 22.0.2 from /home/alexsis/proj/JupyterTests310/venv/lib/python3.10/site-packages/pip (python 3.10)\n",
-      "/home/alexsis/proj/JupyterTests310/venv/bin/python3\n"
+      "pip 23.0.1 from /home/alexsis/.pyenv/versions/3.10.11/envs/JupyterTests310/lib/python3.10/site-packages/pip (python 3.10)\n",
+      "/home/alexsis/.pyenv/versions/3.10.11/envs/JupyterTests310/bin/python3.10\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install tensorflow"
+    "#!pip install tensorflow==2.12.*"
    ]
   },
   {
@@ -41,9 +41,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-25 18:15:53.321357: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-05-27 12:50:23.359638: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-25 18:15:53.950442: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-05-27 12:50:24.064441: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     },
     {
@@ -73,11 +73,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-25 18:16:05.162622: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2023-05-27 12:50:30.980898: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2023-05-25 18:16:05.333513: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2023-05-27 12:50:31.154253: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2023-05-25 18:16:05.333553: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2023-05-27 12:50:31.154343: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n"
      ]
     },
